--- a/pjlib/include/pj/config_site_cmake.in
+++ b/pjlib/include/pj/config_site_cmake.in
@@ -1,15 +1,15 @@
 #pragma once
 
-#cmakedefine USE_PJMEDIA_ADVERTISE_RTCP
-#ifdef USE_PJMEDIA_ADVERTISE_RTCP
+#cmakedefine PJPROJECT_USE_PJMEDIA_ADVERTISE_RTCP
+#ifdef PJPROJECT_USE_PJMEDIA_ADVERTISE_RTCP
 #   define PJMEDIA_ADVERTISE_RTCP 1
 #else
 #   define PJMEDIA_ADVERTISE_RTCP 0
 #endif
 
-#cmakedefine USE_OPENSSL_SSL_TLS_SUPPORT
+#cmakedefine PJPROJECT_USE_OPENSSL_SSL_TLS_SUPPORT
 #cmakedefine HAS_OPENSSL_HEADERS
-#ifdef USE_OPENSSL_SSL_TLS_SUPPORT
+#ifdef PJPROJECT_USE_OPENSSL_SSL_TLS_SUPPORT
 #   ifdef HAS_OPENSSL_HEADERS
 #       define PJ_HAS_SSL_SOCK 1
 #       define PJSIP_HAS_TLS_TRANSPORT 1
@@ -20,4 +20,13 @@
 #else
 #   define PJ_HAS_SSL_SOCK 0
 #   define PJSIP_HAS_TLS_TRANSPORT 0
+#endif
+
+#cmakedefine PJPROJECT_USE_PJMEDIA_GSM_CODEC
+#ifdef PJPROJECT_USE_PJMEDIA_GSM_CODEC
+#   define PJMEDIA_HAS_GSM_CODEC 1
+#else
+#   define PJMEDIA_HAS_GSM_CODEC 0
+#endif
+
 #endif
